--- a/templates/Signin.html
+++ b/templates/Signin.html
@@ -19,7 +19,7 @@
                     <div class="toggle-panel toggle-left">
                         <h1>Welcome!</h1>
                         <p>Ya tienes cuenta?? Entonces inicia sesion</p>
-                        <a href="Login" class="btn-signin btns-form" id="login">Sign In</a>
+                        <a href="Login" class="btn-signin btns-form" id="login">Log In</a>
                     </div>
                 </div>
             </div>
