agregando animacion, en proceso
Signed-off-by: KRis20F <145122979+KRis20F@users.noreply.github.com>

--- a/templates/Confirmed.html
+++ b/templates/Confirmed.html
@@ -3,34 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="../static/css/reset.css">
-    <link rel="stylesheet" href="../static/css/style.css">
-    <link rel="stylesheet" href="../static/css/getMoney.css">
     <title>Document</title>
 </head>
 <body>
-    <div id="wrapper" class="home">
-        <header id="header-all-container">
-            <div class="container-header">
-                <div class="wrapper header-wrapper">
-                    <a href="Home">
-                        <div class="title-header">
-                        <img src="../static/img/logo Bank.jpeg" style="width: 69px;" alt="salame bank logo">
-                            <h1 class="title_bank_principal">Salame Bank</h1>
-                        </div>
-                    </a>
-                </div>
-            </div>
-        </header>
-        <main class="form-all">
-            <section class="container-form-money">
-                <section class="form-money center-text">
-                    <p>SE HAN REGISTRADO TUS DATOS CORRECTAMENTE</p>
-                    <a href="Login" id="btn-submit">Iniciar Sesion</a>
-                </section>
-            </section>
-        </main>
-    </div>
+    <section>
+        <h2>SE HAN REGISTRADO TUS DATOS CORRECTAMENTE</h2>
+        <a href="Login"><button class="login">Iniciar Sesion</button></a>
+    </section>
+
 </body>
-</html>
+</html> 
