--- a/templates/Login.html
+++ b/templates/Login.html
@@ -47,7 +47,7 @@
     </div>
 
     <script src="../static/js/barba.min.js"></script>
-    <script src="../static/js/script.js"></script>
+    <script src="../static/js/transitions.js"></script>
 </body>
 
 </html>
