--- a/templates/Signin.html
+++ b/templates/Signin.html
@@ -19,12 +19,11 @@
                     <div class="toggle-panel toggle-left">
                         <h1>Welcome!</h1>
                         <p>Ya tienes cuenta?? Entonces inicia sesion</p>
-                        <a href="Login" class="btn-signin btns-form" id="login">Log In</a>
+                        <a href="Login" class="btn-signin btns-form" id="login">Sign In</a>
                     </div>
                 </div>
             </div>
             <div class="form-container sign-up" id="signup">
-                <p style="color: red;">{{error_message}}</p>
                 <form action="/Confirmed" method="post">
                     <h1>Create Account</h1>
                     <div class="social-icons">
@@ -46,13 +45,12 @@
     
                     <button class="btns-form" type="submit">Registrarse</button>
                 </form>
-            </div>
-            
+            </div> 
         </div>
     </div>
 
 
     <script src="../static/js/barba.min.js"></script>
-    <script src="../static/js/script.js"></script>
+    <script src="../static/js/transitions.js"></script>
 </body>
 </html>
