--- a/static/css/form.css
+++ b/static/css/form.css
@@ -6,6 +6,7 @@ body{
     justify-content: center;
     height: 100vh;
     font-size: 32px;
+    transition: all .3s;
 }
 
 .wrapper {
@@ -133,11 +134,29 @@ body{
       clip-path: inset(0 0 0 0);
     }
   }
-  
+
+
+.loading {
+    opacity: 0;
+}  
 
 @media ( width > 775px) {
-    
 
+body::after {
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: -100vw;
+    left: 0;
+    background-color: #ccc;
+    transition: all .3s;
+}
+    
+.loading {
+    top: 0;
+
+}   
 
 .container p{
     font-size: 14px;
