--- a/templates/Completed.html
+++ b/templates/Completed.html
@@ -3,13 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="../static/css/reset.css">
+    <link rel="stylesheet" href="../static/css/style.css">
+    <link rel="stylesheet" href="../static/css/getMoney.css">
     <title>Document</title>
 </head>
 <body>
-    <section>
-        <h2>SE HA COMPLETADO LA TRANSACCION :3</h2>
-        <a href="Home"><button class="login">Volver al menu jefe</button></a>
-    </section>
-
+    <div id="wrapper" class="home">
+        <header id="header-all-container">
+            <div class="container-header">
+                <div class="wrapper header-wrapper">
+                    <a href="Home">
+                        <div class="title-header">
+                        <img src="../static/img/logo Bank.jpeg" style="width: 69px;" alt="salame bank logo">
+                            <h1 class="title_bank_principal">Salame Bank</h1>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </header>
+        <main class="form-all">
+            <section class="container-form-money">
+                <section class="form-money center-text">
+                    <p class="emoji">🤑👌</p>
+                    <p>SE HA COMPLETADO LA TRANSACCION</p>
+                    <a href="Home" id="btn-submit">Volver al menu</a>
+                </section>
+            </section>
+        </main>
+    </div>
 </body>
 </html>
