--- a/templates/Signin.html
+++ b/templates/Signin.html
@@ -24,6 +24,7 @@
                 </div>
             </div>
             <div class="form-container sign-up" id="signup">
+                <p style="color: red; position: absolute;top: 0;left: 84px;">{{error_message}}</p>
                 <form action="/Confirmed" method="post">
                     <h1>Create Account</h1>
                     <div class="social-icons">
