--- a/templates/deposit.html
+++ b/templates/deposit.html
@@ -26,6 +26,8 @@
         <main class="form-all">
             <section class="container-form-money">
                 <form action="/Completed" method="post" class="form-money">
+
+                    <p style="color: red; position: absolute;top: 45px;left: 84px;">{{error_message}}</p>
                      
                     <input type="hidden" name="action" value="deposit">
                     <ul>
