--- a/static/css/getMoney.css
+++ b/static/css/getMoney.css
@@ -51,7 +51,7 @@ margin-top: 50px;
 }
 
 .center{
-    top: 149px;
+    top: 103px;
     left: 90px;
 }
 
@@ -120,4 +120,14 @@ margin-top: 50px;
     color: #fff;
 }
 
+.emoji {
+    font-size: 5em;
+    text-shadow: 4px 0px 12px black;
+    margin-top: -19px;
+    margin-bottom: 42px;
 
+}
+
+.center-text {
+    text-align: center;
+}
