--- a/static/css/home.css
+++ b/static/css/home.css
@@ -162,8 +162,9 @@
 
 .ul-list-transactions {
     display: flex;
-    flex-direction: column;
-    gap: 31px;
+    flex-direction: column-reverse;
+    gap: 24px;
+    margin-top: 35px;
 }
 
 .list-transation-none {
