--- a/templates/Home.html
+++ b/templates/Home.html
@@ -138,7 +138,7 @@
                                 
                                 <li class="list-transation-none">
                                     <img src="../static/img/mony-removebg-preview.png" alt="no hay nada mony salame bank">
-                                    No haz hecho alguna transaccion por ahora.
+                                    No has hecho alguna transaccion por ahora.
                                 </li>
                                 
                                 {% endif %}                                    
