--- a/templates/transfer.html
+++ b/templates/transfer.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../static/css/reset.css">
     <link rel="stylesheet" href="../static/css/style.css">
     <link rel="stylesheet" href="../static/css/getMoney.css">
-    <title>Document</title>
+    <title>Transferencias</title>
 </head>
 <body>
     <div id="wrapper" class="home">
